# Guitar-Synthsizer

./: pyproject.toml
src/digitar/: burst.py  processing.py  synthesis.py  temporal.py
