[tool.poetry]
name = "digitar"
version = "0.1.0"
description = ""
authors = ["zZz. <57362750+zzzzzzzZzzzzzzZ-pong@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "digitar", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.0"
pedalboard = "^0.9.7"
pydantic = "^2.7.4"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
